# snitch

./: 404.html  Bender.yml  index.html  set-banshee-env.sh  sitemap.xml
hw/system/: .gitignore
rm/custom_instructions/: index.html
rm/reqrsp_interface/: index.html
rm/snitch/: index.html
rm/snitch_cluster/: index.html
rm/solder/: index.html
runtime/Classes/: index.html
runtime/Examples/: index.html
runtime/Files/: index.html
runtime/Modules/: index.html
runtime/Namespaces/: index.html
runtime/Pages/: index.html
schema-doc/address_range/: index.html
schema-doc/address_range-properties-address/: index.html
schema-doc/address_range-properties-length/: index.html
schema-doc/axi_tlb/: index.html
schema-doc/axi_tlb-properties-l1_cut_ax/: index.html
schema-doc/axi_tlb-properties-l1_num_entries/: index.html
schema-doc/axi_tlb-properties-max_trans/: index.html
schema-doc/axi_xbar-properties-fall_through/: index.html
schema-doc/axi_xbar-properties-max_mst_trans/: index.html
search/: search_index.json
sw/applications/: CMakeLists.txt  data_gen.py
sw/applications/data/: conv2d_params.hjson  data_gemm.h  gemm_params.hjson
sw/applications/include/: data_batchnorm.h  data_conv.h  data_maxpool.h
sw/applications/src/: net_batchnorm.c  net_conv2d.c  net_gemm.c  net_maxpool.c
sw/applications/src/kernels/: batchnorm.c  batchnorm.h  gemm.c  gemm.h  maxpool.c  maxpool.h
sw/applications/src/layers/: batchnorm_layer.c  conv2d_layer.c  layer.h  maxpool_layer.c
sw/applications/src/utils/: utils.c  utils.h
util/: Makefrag  dma_trace.py
(+412 files in other folders)
